--- a/Assets/css/auth.css
+++ b/Assets/css/auth.css
@@ -18,6 +18,9 @@ body, html {
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000;
 }
+.error {
+    color : red;
+}
 
 .modal-content {
     background-color: white;
